# music-generator

./: .env  .env.development  .gitignore  README.md  docker-compose.yml  lefthook.yml  manage.py  pyproject.toml  setup.cfg  tasks.py
docker/backend/: Dockerfile
music_generator/: settings.py  urls.py  wsgi.py
music_generator/core/: admin.py  enums.py  models.py  setup.py  tempo.py
music_generator/core/management/commands/: setup_core_data.py
music_generator/core/migrations/: 0001_initial.py  0002_auto_20200315_1657.py  0003_note_octave.py  0004_auto_20200315_1712.py  0004_auto_20200315_1843.py  0005_auto_20200315_1849.py
music_generator/songs/: forms.py  generator.py  views.py
music_generator/static/css/: main.css
music_generator/static/js/: main.js
music_generator/templates/: base.html
music_generator/templates/songs/: song.html
nginx/: music-generator.conf
