[tool.poetry]
name = "music_generator"
version = "0.0.1"
description = ""
authors = ["Rafal Jusiak <kontakt@rafaljusiak.pl>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "<3.0"
python-env-loader = "^0.0.1"
ipython = "^7.11.1"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
factory_boy = "^2.12.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
